<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Masjid Check-In Scanner</string>

    <!-- Indicator Symbols -->
    <string name="success_indicator">✓</string>
    <string name="failure_indicator">✕</string>
    <string name="disabled_indicator" />
    <string name="unverified_indicator">!</string>

    <!-- Main Activity -->
    <string name="scanner_in_testing_mode_notification">Scanner is Currently in Testing Mode</string>
    <string name="saved_scan_logs_notification">Saved Scan Logs: %d</string>
    <string name="selected_event_notification">Selected Event: %s</string>
    <string name="selected_event_notification_with_attendance">Selected Event: %s Capacity: %d/%d</string>

    <!-- Login Fragment -->
    <string name="username_placeholder">Enter Username</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="login_button_text">Login</string>

    <!-- Settings Fragment -->
    <string name="organization_name_placeholder">Organization Name</string>
    <string name="door_spinner_placeholder">Select Door</string>
    <string name="event_spinner_placeholder">Select Event</string>
    <string name="direction_placeholder">Select Direction</string>
    <string name="in_direction_placeholder">IN</string>
    <string name="out_direction_placeholder">OUT</string>
    <string name="scan_button">Scan</string>
    <string name="logout_button">Logout</string>
    <string name="info_button">Info</string>
    <string name="logout_dialog_title">Confirmation</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="logout_dialog_positive_button">Logout</string>
    <string name="logout_dialog_negative_button">Cancel</string>
    <string name="app_icon_content_description">App Icon</string>
    <string name="system_information">System Information</string>
    <string name="settings_drawer_scanner_version_title">Scanner Version</string>
    <string name="settings_drawer_scanner_version_text">PLACEHOLDER</string>
    <string name="settings_drawer_authentication_api_version_title">Authentication API Version</string>
    <string name="settings_drawer_authentication_api_version_text">PLACEHOLDER</string>
    <string name="settings_drawer_backend_api_version_title">Backend API Version</string>
    <string name="settings_drawer_backend_api_version_text">PLACEHOLDER</string>
    <string name="settings_drawer_device_id_title">Device ID</string>
    <string name="settings_drawer_device_id_text">PLACEHOLDER</string>
    <string name="scanner_mode_selection_dialog_title">Scanner Mode Selection</string>
    <string name="scanner_mode_selection_dialog_message">Scanner Mode: </string>
    <string name="scanner_mode_selection_dialog_message_production_mode">PRODUCTION</string>
    <string name="scanner_mode_selection_dialog_message_testing_mode">TESTING</string>
    <string name="scanner_mode_selection_dialog_ok_button">OK</string>
    <string name="event_selection_dialog_title">Select Event</string>
    <string name="select_event_button">Select Event</string>
    <string name="remove_event_button">Remove Event</string>
    <string name="no_events_message">No Events for Today</string>

    <!-- Scanner Fragment -->
    <string name="settings_button">Settings</string>
    <string name="failure_indicator_content_description">Failure Indicator</string>
    <string name="success_indicator_content_description">Success Indicator</string>
    <string name="offline_success_indicator_content_description">Offline Success Indicator</string>
    <string name="warning_indicator_content_description">Warning Indicator</string>
    <string name="infected_visitor_indicator_content_description">Infected Visitor Indicator</string>
    <string name="not_booked_indicator_content_description">Not Booked Indicator</string>
    <string name="capacity_reached_indicator_content_description">Capacity Reached Indicator</string>
    <string name="scan_history">Scan History</string>
    <string name="scan_history_button_expand">˄</string>
    <string name="scan_history_button_collapse">˅</string>
    <string name="scan_history_button_icon_content_description">Scan History Button</string>
    <string name="scan_recorded_offline_message">Saved scan information to device due to limited internet connection. Please ensure that you have an active internet connection.</string>
    <string name="visit_logs_upload_progress_indicator_message">Uploading saved visit logs…</string>
    <string name="scanner_progress_indicator_determinate_message_percentage_placeholder">0%</string>
    <string name="scanner_progress_indicator_determinate_message_percentage_value">%d%%</string>
    <string name="scanner_progress_indicator_determinate_message_items_remaining_placeholder">0/0</string>
    <string name="scanner_progress_indicator_determinate_message_items_remaining_value">%d/%d</string>
    <string name="visit_log_upload_timeout_message">Saved visit logs have not been completely uploaded due to timeout. The process will resume the next time the scanner page is opened.</string>
    <string name="override_button">OVERRIDE</string>

    <!-- Urls -->
    <!-- Production -->
    <string name="login_base_url_production">PRODUCTION API LOGIN BASE URL</string>
    <string name="authentication_base_url_production">PRODUCTION API AUTHENTICATION BASE URL</string>
    <string name="backend_base_url_api_production">PRODUCTION API BACKEND BASE URL SUFFIXED WITH "/api"</string>
    <string name="backend_base_url_production">PRODUCTION API BACKEND BASE URL</string>
    <!-- Testing -->
    <string name="login_base_url_testing">TESTING API LOGIN BASE URL</string>
    <string name="authentication_base_url_testing">TESTING API AUTHENTICATION BASE URL</string>
    <string name="backend_base_url_api_testing">TESTING API BACKEND BASE URL SUFFIXED WITH "/api"</string>
    <string name="backend_base_url_testing">TESTING API BACKEND BASE URL</string>

    <!-- Properties -->
    <string name="tenant_id" tools:ignore="TypographyDashes">TENANT ID</string>
    <string name="app_center_secret" tools:ignore="TypographyDashes">APP CENTER SECRET</string>

    <!-- Files -->
    <string name="visit_logs_file_name">visit_logs.csv</string>

</resources>