<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <!-- Used to store binding data -->
    <data>

        <!-- Indicates that the binding should contain a ViewModel variable with a type -->
        <variable
            name="viewmodel"
            type="ca.snmc.scanner.screens.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:id="@+id/login_fields_group">

            <!-- Organization Name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/organization_name_placeholder"/>

            <!-- Group for Door Selection Label and Spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <!-- Door Selection Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/door_spinner_placeholder"/>

                <!-- Used to Create Maximum Space Between Two Elements -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!-- Door Selection Spinner -->
                <Spinner
                    android:id="@+id/organizationSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

            </LinearLayout>

            <!-- Progress Indicator -->
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/settings_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <!-- Group for Direction Selection Label and Switch -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <!-- Direction Selection Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/direction_placeholder"/>

                <!-- Used to Create Maximum Space Between Two Elements -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!-- Group for Switch and Labels -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">

                    <!-- Out Direction Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/out_direction_placeholder"/>

                    <!-- Direction Switch -->
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:checked="true"/>

                    <!-- In Direction Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/in_direction_placeholder"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Error Indicator -->
            <TextView
                android:visibility="gone"
                android:id="@+id/settings_error_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/failureIndicator"/>

        </LinearLayout>

        <Button
            android:id="@+id/scan_button"
            android:onClick="@{viewmodel::onScanButtonClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/scan_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>